--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ django = "^4"
 gunicorn = "20.1.0"
 python = "^3.8"
 python-dotenv = "0.20.0"
+whitenoise = "6.2.0"
 
 
 [tool.poetry.dev-dependencies]
