--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["VasiliyBogdanov <moproq@icloud.com>"]
 dj-database-url = "0.5.0"
 django = "^4"
 gunicorn = "20.1.0"
+psycopg2-binary = "^2.9.3"
 python = "^3.8"
 python-dotenv = "0.20.0"
 whitenoise = "6.2.0"
