--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = ""
 authors = ["VasiliyBogdanov <moproq@icloud.com>"]
 
 [tool.poetry.dependencies]
-dj-database-url = "0.5.0"
 django = "^4"
+django-bootstrap4 = "^22.1"
+dj-database-url = "0.5.0"
 gunicorn = "20.1.0"
 psycopg2-binary = "^2.9.3"
 python = "^3.8"
