--- a/task_manager/fixtures/tasks.json
+++ b/task_manager/fixtures/tasks.json
@@ -9,7 +9,11 @@
             "author": 1,
             "executor": 2,
             "created_at": "2022-07-05T07:45:48.578Z",
-            "modified_at": "2022-07-05T07:45:48.578Z"
+            "modified_at": "2022-07-05T07:45:48.578Z",
+            "labels": [
+                1,
+                2
+            ]
         }
     },
     {
@@ -22,7 +26,8 @@
             "author": 2,
             "executor": 1,
             "created_at": "2022-07-05T07:44:18.416Z",
-            "modified_at": "2022-07-05T07:44:18.416Z"
+            "modified_at": "2022-07-05T07:44:18.416Z",
+            "labels": []
         }
     }
 ]
