--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["VasiliyBogdanov <moproq@icloud.com>"]
 django = "^4"
 django-bootstrap4 = "^22.1"
 dj-database-url = "0.5.0"
+django-filter = "^21.1"
 gunicorn = "20.1.0"
 psycopg2-binary = "^2.9.3"
 python = "^3.8"
