--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ gunicorn = "20.1.0"
 psycopg2-binary = "^2.9.3"
 python = "^3.8"
 python-dotenv = "0.20.0"
+rollbar = "^0.16.2"
 whitenoise = "6.2.0"
 
 
