--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,13 +19,10 @@ python-dotenv = "0.20.0"
 rollbar = "^0.16.2"
 whitenoise = "6.2.0"
 
-
 [tool.poetry.dev-dependencies]
 autopep8 = "^1.6.0"
 flake8 = "^4.0.1"
-pytest = "^7.1.1"
-pytest-cov = "^3.0.0"
-
+coverage = "^6.4.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
